--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "react-textarea-autosize": "^7.1.0",
     "react-uid": "^2.2.0",
     "styled-components": "^4.1.1",
-    "styled-icons": "^6.2.0"
+    "styled-icons": "6.4.0"
   }
 }
