Update react + add initiatives 15, 16

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-textarea-autosize": "^7.1.0",
     "react-uid": "^2.2.0",
     "styled-components": "^4.1.1",
