--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "private": true,
+  "name": "liquify",
+  "author": "reddhouse",
+  "license": "ISC",
+  "version": "0.1.1",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -19,5 +22,6 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.2"
-  }
+  },
+  "private": true
 }
